--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "react-native-wheel-color-picker": "^1.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
